[metadata]
name = ppaya_lambda_utils
version = attr: ppaya_lambda_utils.__version__
author = PPAYA Ltd
description = Helper utilities for AWS lambda and aws-lambda-powertools
url = https://github.com/ppaya/ppaya_lambda_utils_python
license_files =
  LICENSE.txt

[options]
packages = ppaya_lambda_utils
install_requires = 
    aws-lambda-powertools==1.11.0

[options.extras_require]
tests =
  pytest
  flake8
  mypy
