[metadata]
name = ppaya_lambda_utils
version = attr: ppaya_lambda_utils.__version__
author = PPAYA Ltd
description = Helper utilities for AWS lambda and aws-lambda-powertools
url = https://github.com/ppaya/ppaya_lambda_utils_python
license_files =
  LICENSE.txt

[options]
packages = find:
include-package-data = True
install_requires = 
    aws-lambda-powertools>=1.21.1
    pytz>=2021.3

[options.extras_require]
tests =
  pytest
  flake8
  mypy

[options.package_data]
ppaya_lambda_utils = py.typed
